--- a/2. HTML_2.md
+++ b/2. HTML_2.md
@@ -29,14 +29,91 @@ rel 속성으로 파일의 형식을 알려준다.
   - 문자의 Encoding을 결정해준다
   - 쉽게 말해서 lang에서 결정된 언어를 어떻게 표현할 것인지 결정하는 것이다
 
+### `<script>` Element
+> 자바 스크립트 언어를 HTML 안에 넣어줄 때 사용된다      
+> 외부 파일에 연결해서 사용하는 방법도 있다
+
 ## HTML Block & Inline
 
+### Block-level Element
+- block-level element는 항상 새 줄에서 시작된다
+- width를 지정해주지 않으면 항상 full width를 사용한다
+- 줄의 상단과 하단에 공백이 생긴다
+- `<div>`가 대표적인 Block-level Element이다
+
+![image](https://user-images.githubusercontent.com/80378041/159826462-1aa7a7f1-0c79-4a44-ae33-e2b668d0d40a.png)     
+Block-level Elements
+
+### Inline-level Elements
+- 새로운 줄에서 시작하지 않는다
+- 필요한 width만 사용한다
+- 공백이 생기지 않는다
+
+![image](https://user-images.githubusercontent.com/80378041/159826846-08ef7d36-b447-43b5-939d-076740afd9de.png)     
+Inline-level Elements
+
 ## HTML Semantic Elements
+> 그 자체로도 유기적인 정보를 담고 있는 Element이다     
+> `<form>, <table>, <article>`등이 있다
+
+### `<section>` Element
+> 말 그대로 section을 구분해주는 것이다      
+> 보여지는 모습은 div나 다름이 없다      
+> 하지만, 조금 더 구조적으로 관리를 할 수 있다
+
+### `<article>` Element
+> section과 비슷하지만, article은 좀 더 독립적인 내용을 보여준다      
+> 블로그나 뉴스 기사 등에 사용된다
+
+### `<header>` Element
+> Semantic Elment로써의 header는 div와 비슷한 형태로 사용된다      
+> 글 전체에 대한 소개로써 사용된다
+
+### `<nav>` Element
+> 링크를 걸 때 사용된다      
+> 페이지 내에서 의미있게 구분되는 중요한 링크를 넣을 때 사용된다
+
+### `<aside>` Element
+> 메인 주제에서 조금 벗어나지만, 관련이 있는 주제를 넣을 때 사용한다      
+
+### `<figure>, <figcaption>` Element
+> 보고서 등에 사용되는 목적이 있는 사진을 삽입할 때 사용한다     
+> figcaption은 alt와 유사하지만, 좀 더 명확하게 그림을 설명하는 역할로 쓰인다
 
 ## HTML Entities
+> `&nbsp;`의 형태로 쓰인다     
+> 부등호나 띄워쓰기 등을 표현하기 위해 사용되는 약속된 기호이다      
+> `<p>&apos;Entity&apos; &amp;&lt;Symbol&gt;</p>` -> `'Entity' & <Symbol>`
+
+![image](https://user-images.githubusercontent.com/80378041/159830773-7fd38534-8ca2-4148-86c0-8267679ebffe.png)
+
 
 ## HTME File Paths
+> 파일이 어느 곳에 위치해 있는지를 알려주기 위해 사용한다     
+> 웹 페이지, 이미지, style sheet, 자바 스크립트 등의 링크를 연결할 때 사용한다      
+![image](https://user-images.githubusercontent.com/80378041/159831082-f5b6d66f-0d97-4017-9c2c-00ec4e0fa4c1.png)
 
 ## HTML Links
+> 하이퍼 링크를 의미한다      
+> 클릭하면, 이어져 있는 페이지로 넘어가게 된다
 
-## HTML Responsive
+### Target Attribute
+- `_blank` : 링크를 새 창에 띄워준다
+- `_self` : defualt 값으로, 본인의 창에 그대로 띄워준다
+- `_parent` : 프레임 안에서 링크를 눌렀을 때, 프레임을 포함하고 있는 전체 페이지를 이동시켜준다
+- `_top` : 프레임이 중첩되었을 때, 그 프레임의 최상위 페이지를 이동시켜준다
+
+### `<iframe>` Element
+> web page를현재 페이지 안에 보여주게 된다      
+
+![image](https://user-images.githubusercontent.com/80378041/159831751-9f1b45da-a6d8-40a7-b699-a03c1fa569fa.png)     
+위의 코드로 아래처럼 보여지게 된다.      
+![image](https://user-images.githubusercontent.com/80378041/159831783-2933e9ca-974c-4e20-bfda-4e388c95e213.png)
+
+### Bookmark
+> 사용자가 특정 part로 점프를 할 수 있도록 사용된다      
+> 페이지가 매우 긴 경우에 효율적이다
+
+- 먼저, id를 점프할 곳으로 설정해둔다
+- 그 다음, href로 id를 링크로 걸어준다
+- 다른 페이지로의 북마크도 설정할 수 있다
