--- a/4. CSS_2.md
+++ b/4. CSS_2.md
@@ -45,4 +45,69 @@
 
 ![image](https://user-images.githubusercontent.com/80378041/162605600-9df86157-7595-46b7-b58e-e5f2b0b3e28b.png)
 
+## CSS Display
+> 말 그대로 우리 눈에 보여지는 것을 바꿀 수 있다.          
+> element들을 보이게, 안보이게 할 수 있고, 다양한 효과를 줄 수 있다.
+
+### Display:inline, block;
+> 원래의 성질을 바꿔줄 수 있다.         
+> 예를 들어 list의 li 속성은 원래 block의 성질을 가졌지만,            
+> `display:inline;`을 통해 inline의 형태로 표시할 수 있다.           
+
+
+### Hide an Element
+> element를 숨길 수 있는 방법은 2가지 방법이 있다.          
+> `display:none;`과 `visibility:hidden;`이다.          
+> 하지만 display:none은 그곳에 할당된 공간까지 없어져서 그 공간에 다른 content가 들어오는 반면,                   
+> visibility:hidden은 눈에만 안보이는 것이지, 할당된 공간까지 없어지진 않는다.
+
+### Simple tooltip hover
+> display와 hover를 결합해서 마우스를 올렸을 때,          
+> 어떤 힌트를 보여준다거나, 새로운 content를 눈에 보이게 할 수 있다.            
+
+## CSS Float & Clear
+
+### Float
+> 원래의 정렬 속성을 벗어나서,          
+> 왼쪽이나 오른쪽에 element를 넣을 수 있다.           
+> 복잡한 layout을 보여주고 싶을 때 사용한다.
+
+- left : element를 왼쪽에 넣어준다
+- right : element를 오른쪽에 넣어준다
+- none : default 값으로 아무 float이 적용되지 않은 것이다
+- inherit : 부모 element의 float 값을 상속받는다
+
+### Clear
+> 보통 Float 속성과 세트로 사용된다.           
+> Float 속성을 지우는 용도로 사용된다.           
+
+- none : 기본값으로, 양쪽에 float element가 올 수 있도록 해준다
+- left : 왼쪽에 float element가 올 수 없도록 지정해준다
+- right : 오른쪽에 float element가 올 수 없도록 지정해준다
+- both : 양쪽에 float element가 올 수 없도록 지정해준다
+- inherit : 부모 element의 clear 값을 상속받는다
+
+## CSS Icon
+> HTML에서는 여러가지 Icon들도 사용할 수 있는데, HTML의 헤더 부분에             
+> `<script src="https://kit.fontawesome.com/yourcode.js"></script>`,            
+> `<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">`,            
+> `<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">`          
+> 세 가지 링크중 하나를 추가해주는 방법으로 Icon들을 사용할 수 있다
+
+## CSS Navigation Bar
+> CSS와 함께라면 HTML의 네비게이션 바(Nav bar)를 보기 좋은 방법으로 꾸밀 수 있다.
+
+## CSS 2D/3D Transfortation
+
+### 2D Transfortation
+> CSS에서는 element를 회전시키거나, 이동시키는 등의 효과를 줄 수 있다.
+> `transform: rotate(?deg)`의 형식으로 돌릴 수 있다
+
+### 3D Transfortation
+> 2D와는 다르게 x, y, z축으로 모두 돌릴 수 있다.
+> `transform: rotateX(?deg), transform: rotateY(?deg), transform: rotateZ(?deg)`의 형식으로 돌릴 수 있다
+> 이 때, Z가 2D rotate와 같은 효과를 주는 속성이다
+
+
+
 
