--- a/3. HTML_3.md
+++ b/3. HTML_3.md
@@ -35,6 +35,35 @@
 > form에 지정을 할 수는 있지만, form에 지정하는 attribute는 아니다.      
 > form 안의 데이터에 label을 꼭 붙여주어야 서버에 전송 후에 구분하여 사용할 수 있다.
 
+### Value Attribute
+> input element안에 default로 값을 지정해줄 때 사용한다.
+
+### Checked Attribute
+> input type="checkbox"나 "radio"에서 value atrribute와 동일한 역할을 한다.     
+> default로 check가 되어있는 상태로 나오게 된다.
+
+### required Attribute
+> required attribute를 지정해주면, 지정한 곳의 값이 아무것도 없다면 제출을 할 수 없게 해준다.     
+> 다시말해, 꼭 입력해야 하는 부분에 사용해주는 것이다.
+
+### readonly Attribute
+> readonly attribute를 지정해주면, 사용자가 지우거나 고칠 수 없게 된다.      
+> text 또는 textarea에서만 사용가능하다
+
+### disabled Attribute
+> disabled attribute를 사용하면 아예 사용할 수 없게 된다.      
+> readonly와의 차이점은 readonly는 고칠수만 없을 뿐 전송은 가능하지만,      
+> diabled는 아예 전송조차 되지 않는 차이점이 있다.
+
+### placeholder Attribute
+> 입력될 값의 가이드라인을 지정해준다.      
+> 실제 데이터는 아니기에 전송은 되지 않는다.
+
+### pattern Attribute
+> 데이터를 어떤 pattern의 형태로 입력받을지 결정해주고,      
+> 지정한 형태로 입력하지 않으면 전송되지 않도록 해준다.      
+> 정규표현식의 형태로 사용해준다.     
+
 ## `<form>` Element
 ---
 ### `<input>` Element
