--- a/5. CSS_2.md
+++ b/5. CSS_2.md
@@ -108,6 +108,29 @@
 > `transform: rotateX(?deg), transform: rotateY(?deg), transform: rotateZ(?deg)`의 형식으로 돌릴 수 있다
 > 이 때, Z가 2D rotate와 같은 효과를 주는 속성이다
 
+## CSS selector
+### CSS `[attribute] selector`
+> 대괄호 안에 attribute를 입력해주면,      
+> 해당 attribute를 가지고 있는 것들만 선택해서 CSS style을 입혀줄 수 있다.
+
+### CSS `[attribute="value"] selector`
+> 위의 방법과는 비슷하지만, 해당 attribute의 특정 value를 가지고 있는 것들만 선택할 수도 있다.
+
+### CSS `[attribute ~="value"] selector`
+> 특정 attribute에 특정 value가 포함된 모든 것들을 선택할 수 있다.
+
+### CSS `[attribute *="value"] selector`
+> 위의 ~= 는 단어를 포함하는 것이었지만, `[attribute *="value"]`는 글자가 포함된 것을 선택한다.
+
+### CSS `[attribute |="value"] selector`
+> value의 단어로 시작되는 것들을 선택한다.
+
+### CSS `[attribute ^="value"] selector`
+> value의 글자로 시작되는 것들을 선택한다.
+
+### CSS `[attribute $="value"] selector`
+> value의 글자로 끝나는 것들을 선택한다.
+
 
 
 
