--- a/2. HTML_2.md
+++ b/2. HTML_2.md
@@ -42,7 +42,7 @@ rel 속성으로 파일의 형식을 알려준다.
 - `<div>`가 대표적인 Block-level Element이다
 
 ![image](https://user-images.githubusercontent.com/80378041/159826462-1aa7a7f1-0c79-4a44-ae33-e2b668d0d40a.png)     
-Block-level Elements
+> Block-level Elements
 
 ### Inline-level Elements
 - 새로운 줄에서 시작하지 않는다
@@ -50,7 +50,7 @@ Block-level Elements
 - 공백이 생기지 않는다
 
 ![image](https://user-images.githubusercontent.com/80378041/159826846-08ef7d36-b447-43b5-939d-076740afd9de.png)     
-Inline-level Elements
+> Inline-level Elements
 
 ## HTML Semantic Elements
 > 그 자체로도 유기적인 정보를 담고 있는 Element이다     
